[package]
name = "turn-proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rcgen = "0.13.2"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
webrtc-dtls = { version = "0.12.0" }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
webrtc-util = { version = "0.11.0", features = ["conn"] }
tokio-util = "0.7.18"
