[package]
name = "turn-proxy-server"
description = "DTLS proxy server for TURN relay"
version = "1.0.2"
edition = "2024"
license = "AGPL-3"
repository = "https://github.com/Urtyom-Alyanov/turn-proxy-server"

[dependencies]
rcgen = "0.13.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
webrtc-dtls = { version = "0.12.0" }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
webrtc-util = { version = "0.11.0", features = ["conn"] }
tokio-util = "0.7.18"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.deb]
maintainer = "Urtyom Alyanov <urtyomalyanov@gmail.com>"
copyright = "2026, Urtyom Alyanov"
license-file = ["LICENSE", "4"]
extended-description = """
DTLS proxy server designed to relay UDP traffic through TURN servers
to bypass restrictive networks or analyze video call traffic.
"""
assets = [
    ["target/release/turn-proxy-server", "/usr/local/bin/turn-proxy-server", "755"],
    ["services/systemd/turn-proxy.service", "/lib/systemd/system/turn-proxy.service", "644"],
    ["example.toml", "/etc/turn-proxy/server/config.toml", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/turn-proxy-server", dest = "/usr/local/bin/turn-proxy-server", mode = "755" },
    { source = "services/systemd/turn-proxy.service", dest = "/usr/lib/systemd/system/turn-proxy.service", mode = "644" },
    { source = "example.toml", dest = "/etc/turn-proxy/server/config.toml", mode = "644" }
]
post_install = """
systemctl daemon-reload
"""
pre_uninstall = """
systemctl stop turn-proxy || true
systemctl disable turn-proxy || true
"""