[package]
name = "turn-proxy-client"
version.workspace = true
description = "DTLS proxy client for TURN relay"
license = "MPL-2"
edition.workspace = true
authors.workspace = true

[dependencies]
rcgen.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
toml.workspace = true
dtls.workspace = true
serde.workspace = true
clap.workspace = true
anyhow.workspace = true
webrtc-util.workspace = true
tokio-util.workspace = true
turn-proxy-lib.workspace = true

turn = "0.17.1"
reqwest = { version = "0.13.2", features = ["json", "form", "hickory-dns", "stream", "gzip"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4"] }
tokio-tungstenite = "0.29.0"
rustls = { version = "0.23.37", features = ["ring"] }
futures-util = "0.3.32"
async-trait = "0.1.89"
hickory-resolver = "0.25.2"
network-interface = "2.0.5"
net-route = "0.4.6"
axum = "0.8.8"
http = "1.4.0"
url = "2.5.8"
open = "5.3.3"
oneshot = "0.2.1"

[package.metadata.deb]
maintainer = "Urtyom Alyanov <urtyomalyanov@gmail.com>"
maintainer-scripts = "dist-specific/deb"
copyright = "2026, Urtyom Alyanov"
license-file = ["LICENSE", "4"]
extended-description = """
DTLS proxy client designed to relay UDP traffic through TURN servers
to bypass restrictive networks or analyze video call traffic.
"""
assets = [
    [
        "target/release/turn-proxy-client",
        "/usr/bin/turn-proxy-client",
        "755",
    ],
    [
        "services/systemd/turn-proxy-client.service",
        "/lib/systemd/system/turn-proxy-client.service",
        "644",
    ],
    [
        "example.toml",
        "/etc/turn-proxy/client/config.toml",
        "644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/turn-proxy-client", dest = "/usr/bin/turn-proxy-client", mode = "755" },
    { source = "services/systemd/turn-proxy-client.service", dest = "/usr/lib/systemd/system/turn-proxy-client.service", mode = "644" },
    { source = "example.toml", dest = "/etc/turn-proxy/client/config.toml", mode = "644" },
]
post_install = """
systemctl daemon-reload
"""
pre_uninstall = """
systemctl stop turn-proxy-client || true
systemctl disable turn-proxy-client || true
"""
