
[package]
name = "turn-proxy-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
webrtc-util.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures-util.workspace = true